[package]
name = "day16"
version = "0.1.0"
authors = ["Bob Matcuk <bmatcuk@gmail.com>"]
edition = "2018"
publish = false

homepage = "https://adventofcode.com/2019/day/16"
keywords = ["adventofcode"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
